--- a/_config.yml
+++ b/_config.yml
@@ -6,15 +6,13 @@ url: "http://arganka.com/"
 theme:
   # Meta
   title: Arganka Yahya
-  avatar: avatar.png
+  avatar:
   gravatar: # Email MD5 hash
   description: "UX and Information Visualization Researcher" # used by search engines
 
   # Header and footer text
   header_text: >
-     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-
-     <p>Remove all header text in <code>_config.yml</code> to disable this feature.</p>
+     <p>I do UX and Information Visualization research</p>
   header_text_feature_image:
   footer_text: >
    Powered by <a href="http://jekyllrb.com">Jekyll</a> with <a href="https://rohanchandra.github.io/project/type/">Type Theme</a>
