email and color

--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ theme:
 
   # Icons
   rss: false
-  email_address: # Full email address, e.g. "sam@example.com"
+  email_address: "arganka@gmail.com"
   behance:
   bitbucket:
   dribbble:
