--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ theme:
   github: 
   google_plus:
   instagram:
-  linkedin:  # Full URL
+  linkedin: "https://fi.linkedin.com/in/arganka"
   pinterest:
   reddit:
   soundcloud:
@@ -36,7 +36,7 @@ theme:
   steam:
   tumblr:
   twitter:
-  wordpress:
+  wordpress: "http://arganka.wordpress.com"
   youtube:
 
   # Scripts
